[package]
name = "rs-color"
version = "0.1.0"
authors = ["dragfire <asem.devajit@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dragfire/color.git"
description = "Make ASCII color strings"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
